# rbac-sim

./: Cargo.toml
data/roles/: Contributor.json  Owner.json  Reader.json  Virtual Machine Administrator Login.json  Virtual Machine Contributor.json  Virtual Machine User Login.json
docs/: RBAC.adoc
src/: lib.rs
test/: group_sales.json  role_assignment_lgriffin.json  user_lgriffin.json
