[package]
name = "rbac-sim"
version = "0.1.0"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["rbac", "experimental"]
repository = "https://github.com/awakecoding/rbac-sim"
homepage = "https://github.com/awakecoding/rbac-sim"
authors = ["Marc-André Moreau <mamoreau@devolutions.net>"]
description = """
RBAC Simulator 2000 learning project
"""
edition = "2018"

[dependencies]
regex = "1.0"
indexmap = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
